--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                                 private bank
                                 since 1994, prioritizes customer-centricity, offering diverse financial services with a
                                 mission to impact a billion lives daily.</p>
-                            <div class="flex items-center gap-x-6">
+                            <div class="flex items-center justify-center lg:justify-start w-full gap-x-6">
                                 <a href="#About"
                                     class="rounded-md bg-primary px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-gray-200 hover:text-primary focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get
                                     started</a>
