added new changes

--- a/public/index.html
+++ b/public/index.html
@@ -38,12 +38,16 @@
             <div class="flex w-full bg-hero-banner bg-cover bg-no-repeat bg-center ">
                 <div class="flex h-full  w-full px-5 backdrop-blur-sm bg-[rgba(0,0,0,0.2)]">
                     <div class="flex lg:grid grid-cols-2 w-full mx-auto max-w-7xl">
-                        <div class="flex flex-col w-full  h-full gap-5 mx-auto items-start justify-center">
+                        <div class="flex flex-col w-full  h-full gap-5 mx-auto items-center lg:items-start justify-center">
                             <div class="flex w-fit h-20 rounded-md ">
-                                <img src="assets/logo/Axis-Bank-Logo.webp" alt="" class="w-full h-full object-contain rounded-md">
+                                <img src="assets/logo/Axis-Bank-Logo.webp" alt=""
+                                    class="w-full h-full object-contain rounded-md">
                             </div>
-                            <h1 class="text-4xl font-bold tracking-tight text-white sm:text-5xl text-center lg:text-left">"Axis Sales Academy Program (ASA)"</h1>
-                            <p class="text-lg leading-8 text-white text-center lg:text-left max-w-lg">Axis Bank, India's third-largest
+                            <h1
+                                class="text-4xl font-bold tracking-tight text-white sm:text-5xl text-center lg:text-left">
+                                "Axis Sales Academy Program (ASA)"</h1>
+                            <p class="text-lg leading-8 text-white text-center lg:text-left max-w-lg">Axis Bank, India's
+                                third-largest
                                 private bank
                                 since 1994, prioritizes customer-centricity, offering diverse financial services with a
                                 mission to impact a billion lives daily.</p>
@@ -62,7 +66,7 @@
                                 </div>
                                 <div class="flex w-full h-[400px]">
                                     <!-- put form here -->
-                                    
+
                                 </div>
                             </div>
                         </div>
