added form in the page

--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,12 @@
                             </div>
                         </div>
                         <div class="hidden lg:flex justify-end items-center">
-                            <div class="flex flex-col max-w-xs bg-white rounded-md p-5 w-full">
+                            <div class="flex flex-col bg-white rounded-md gap-5 p-5 w-fit">
                                 <div class="flex w-full">
                                     <strong class="text-center w-full">Admission Open</strong>
                                 </div>
-                                <div class="flex w-full h-[400px]">
-                                    <!-- put form here -->
-
+                                <div class="flex w-full h-[480px] ">
+                                    <iframe scrolling="no" width="undefined" height="480" class="overflow-hidden w-full overflow-x-hidden"  src="https://www.itm.edu/ISA/forms/isa-form-au/"></iframe>
                                 </div>
                             </div>
                         </div>
