fix the form issue

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,17 @@
             </div>
         </section>
 
+        <div class="flex lg:hidden justify-center items-center">
+            <div class="flex flex-col bg-white rounded-md gap-5 p-5 w-fit">
+                <div class="flex w-full">
+                    <strong class="text-center w-full">Admission Open</strong>
+                </div>
+                <div class="flex w-full h-[480px] ">
+                    <iframe scrolling="no" width="undefined" height="480" class="overflow-hidden w-full overflow-x-hidden"  src="https://www.itm.edu/ISA/forms/isa-form-au/"></iframe>
+                </div>
+            </div>
+        </div>
+
         <hr class="w-full max-w-7xl mx-auto">
 
         <section id="About" class="flex w-full bg-gray-100">
